2009-01-20  Roger While <simrw@sim-basis.de>

	* OC tests for DPC and 78 levels

2008-12-02  Roger While <simrw@sim-basis.de>

	* Activate some more ANSI85 tests

2008-11-28  Roger While <simrw@sim-basis.de>

	* Adjust ANSI85 results; USE GLOBAL tests now run
	* Adjust ANSI85 report output

2008-11-25  Roger While <simrw@sim-basis.de>

	* cobol85/*.pl : Fix warning when running perl with -w

2008-11-07  Roger While <simrw@sim-basis.de>

	* Adjust ANSI85 results; we successfully execute one of the GLOBAL tests

2008-10-17  Roger While <simrw@sim-basis.de>

	* Add test for non-ALLOCATED BASED item

2008-10-11  Roger While <simrw@sim-basis.de>

	* cobol85/Makefile.am : Refix out of source directory builds

2008-09-30  Roger While <simrw@sim-basis.de>

	* Makefile.am : Fix out of source directory builds
	* cobol85/Makefile.am : Ditto

2008-08-09  Roger While <simrw@sim-basis.de>

	* Change ENTRY test so as not to use obscure/obsoleted options

2008-07-02  Roger While <simrw@sim-basis.de>

	* General for all OC tests - Cater for activated END-xxx checking

2008-05-23  Roger While <simrw@sim-basis.de>

	* Due to display POINTER changes, ignore output from POINTER datarep test

2008-03-25  Roger While <simrw@sim-basis.de>

	* Add OC tests for reference modification of FUNCTIONS
	* Add OC test for COB_LOAD_CASE

2008-02-18  Roger While <simrw@sim-basis.de>

	* Add OC test for ANY LENGTH

2008-02-14  Roger While <simrw@sim-basis.de>

	* atlocal.in : Fix up library search order

2008-01-09  Roger While <simrw@sim-basis.de>

	* BY CONTENT not allowed in PROCEDURE header

2008-01-02  Roger While <simrw@sim-basis.de>

	*  Cobol85 tests rechanged to cater for unsupported ALTER

2007-12-27  Roger While <simrw@sim-basis.de>

	** Mark 1.0 RELEASE

2007-12-27  Roger While <simrw@sim-basis.de>

	* Add OC test for WHEN-COMPILED

2007-12-21  Roger While <simrw@sim-basis.de>

	*  Cobol85 tests changed to cater for unsupported ALTER

2007-10-27  Roger While <simrw@sim-basis.de>
